# evoque

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  evoque-config-generator.conf  generate-config-file.sh  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/lib/: evoque
doc/source/: conf.py
etc/evoque/: evoque-config-generator.conf  evoque.conf  evoque.conf.sample
evoque/: cli.py  opts.py  service.py  version.py
evoque/api/: __init__.py  app.py  app.wsgi  auth.py  config.py  hooks.py
evoque/api/controllers/: root.py
evoque/api/controllers/v1/: __init__.py  ticket.py  workflow.py
evoque/api/middleware/: auth_token.py
evoque/cmd/: api.py  engine.py  manage.py
evoque/common/: consts.py  context.py  exceptions.py  i18n.py  messaging.py  rpc.py  rpc_service.py  service.py  utils.py
evoque/db/: api.py
evoque/db/sqlalchemy/: api.py  migration.py  models.py  types.py
evoque/db/sqlalchemy/migrate_repo/: migrate.cfg
evoque/db/sqlalchemy/migrate_repo/versions/: 001_evoque_init.py  002_workflow.py
evoque/engine/: dispatcher.py  service.py
evoque/engine/ticket/: api.py  endpoint.py
evoque/engine/workflow/: __init__.py  api.py  endpoint.py  spiff.py
evoque/rpc/: client.py
evoque/tests/: test_common.py
evoque/tests/unit/: base.py  fakes.py  fixture.py  test_common_context.py
evoque/tests/unit/api/: test_app.py  test_auth.py
evoque/tests/unit/common/: base.py
evoque/tests/unit/db/: base.py  test_ticket.py  test_workflow.py  utils.py
tools/: colorizer.py  install_venv.py  install_venv_common.py
