[metadata]
name = evoque
version = 2015.2
summary = OpenStack Ticket
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    evoque

[entry_points]
console_scripts =
    evoque-api = evoque.cmd.api:main
    evoque-manage = evoque.cmd.manage:main
    evoque-engine = evoque.cmd.engine:main

evoque.workflow =
    spiff = evoque.engine.workflow.spiff:Workflow

oslo.config.opts =
    evoque = evoque.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[compile_catalog]
directory = evoque/locale
domain = evoque

[update_catalog]
domain = evoque
output_dir = sevoque/locale
input_file = evoque/locale/evoque.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = evoque/locale/evoque.pot
